fixed z-index on menu

--- a/_source/styles/3-modules/_menu.scss
+++ b/_source/styles/3-modules/_menu.scss
@@ -21,6 +21,7 @@
 	&--links{
 		overflow: hidden;
 		background: $banner-bg-color;
+		z-index: 5;
 		@include clearfix;
 
 		&--link{
